[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/redsoul.gd" type="Script" id=1]
[ext_resource path="res://sprites/red_soul-sheet.png" type="Texture" id=2]
[ext_resource path="res://sounds/snd_hurt1_ch1.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/snd_break1_ch1.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/snd_break2_ch1.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/spr_heartshards_0-sheet.png" type="Texture" id=6]
[ext_resource path="res://scripts/grazebox.gd" type="Script" id=7]
[ext_resource path="res://sounds/snd_graze_ch1.wav" type="AudioStream" id=8]
[ext_resource path="res://.import/snd_impact_ch1.wav-cde4c4fd4e5a24794274821bd0ce06bf.sample" type="AudioStream" id=9]
[ext_resource path="res://sprites/heart_aqua_outlineless.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_heartwhite.png" type="Texture" id=11]
[ext_resource path="res://sounds/snd_chargeshot_charge.wav" type="AudioStream" id=12]
[ext_resource path="res://sprites/spr_heartblue_outlineless.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_heartorange_0.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 24 )

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/grazebox.png-55fee3cdb02e1f52ab26549f1125eeeb.stex"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 20, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:inv_frames")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 1.3
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.3, 0.433333, 0.566667, 0.7, 0.833333, 0.966667, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 20, 20 ), Rect2( 20, 0, 20, 20 ), Rect2( 0, 0, 20, 20 ), Rect2( 20, 0, 20, 20 ), Rect2( 0, 0, 20, 20 ), Rect2( 20, 0, 20, 20 ), Rect2( 0, 0, 20, 20 ), Rect2( 20, 0, 20, 20 ), Rect2( 0, 0, 20, 20 ), Rect2( 20, 0, 20, 20 ), Rect2( 0, 0, 20, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:inv_frames")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 0.505882, 1, 1, 1, 0 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.0147727 ), 0.0, 3.45882, 0, 0, Vector2( 0.659091, 0.878409 ), 0.523077, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 1, 1, 1, 0.188235, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 1, 9 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 9, 1 )

[node name="soul" type="KinematicBody2D"]
collision_mask = 2
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )

[node name="grazebox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="grazebox"]
visible = false
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="grazebox"]
texture = SubResource( 7 )
region_rect = Rect2( 250, 0, 50, 50 )

[node name="Sprite2" type="Sprite" parent="grazebox"]
texture = SubResource( 7 )
region_rect = Rect2( 250, 0, 50, 50 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="grazebox"]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="break2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 5 )
emitting = false
amount = 6
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.63
texture = ExtResource( 6 )
direction = Vector2( 0, -1 )
spread = 160.0
gravity = Vector2( 0, 230 )
initial_velocity = 220.0
initial_velocity_random = 0.45
anim_speed = 4.0

[node name="ground_pound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
lifetime = 0.5
explosiveness = 0.4
local_coords = false
texture = ExtResource( 13 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 8 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 2
lifetime = 0.6
texture = ExtResource( 10 )
gravity = Vector2( 0, 0 )
scale_amount = 3.0
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 3
lifetime = 0.1
local_coords = false
texture = ExtResource( 14 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 11 )

[node name="parry" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="parry"]
visible = false
shape = SubResource( 9 )

[node name="parry_inv_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="hit_wall" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_wall"]
position = Vector2( 0, -1 )
shape = SubResource( 12 )

[node name="hit_wall_hor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_wall_hor"]
position = Vector2( 1, 0 )
shape = SubResource( 13 )

[connection signal="body_entered" from="parry" to="." method="_on_parry_body_entered"]
[connection signal="body_exited" from="parry" to="." method="_on_parry_body_exited"]
